--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ after_success:
   - docker build -t tangzhiming/multi-worker ./worker
 
   # Login in to the docker CLI
-  
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
   # Take those images and push them to docker hub
+  - docker push tangzhiming/multi-client
+  - docker push tangzhiming/multi-nginx
+  - docker push tangzhiming/multi-server
+  - docker push tangzhiming/multi-worker
