--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,17 @@ after_success:
   - docker push tangzhiming/multi-nginx
   - docker push tangzhiming/multi-server
   - docker push tangzhiming/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-southeast-1"
+  app: "docker-react"
+  env: "DockerReact-env-1"
+  bucket_name: "elasticbeanstalk-ap-southeast-1-613348322318"
+  bucket_path: "docker-multi"
+  on:
+    branch: master
+  access_key_id: 
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
